# disk-crawler-ui

./: .hgignore  AddPatternWindow.cpp  AddPatternWindow.h  CMakeLists.txt  CrawlerThread.cpp  CrawlerThread.h  DiskListWidgetItem.cpp  DiskListWidgetItem.h  EncodingsWindow.cpp  EncodingsWindow.h  HexWidget.cpp  HexWidget.h  NotificationWidget.cpp  NotificationWidget.h  ResultsWindow.cpp  ResultsWindow.h  SearchListWidgetItem.cpp  SearchListWidgetItem.h  SearchResultItem.cpp  SearchResultItem.h  crawler-qt.cpp  crawler-qt.h  devpick.cpp  devpick.h  main.cpp
l18n/: crawler-qt-ru.qm  crawler-qt-ru.ts
